update font color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 @import "https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap";
 .font-nunito {
   font-family: Nunito, sans-serif;
-  background-color: #31e619;
+  background-color: #c2003a;
   border-radius: 5px;
   margin: 5px;
   font-size: 15px;
