--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,15 +80,15 @@ img {
 .btn {
   transition: 0.225s;
   padding: 0.475rem 3rem;
-  border-radius: 0px;
+  border-radius: 5px;
 }
 .btn-primary {
-  background-color: #d70ff2;
-  border-color: #d70ff2 !important;
+  background-color: #491beb;
+  border-color: #491beb !important;
 }
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: #dc7de8;
+  background-color: #5d37e8;
 }
 .btn-primary:focus {
   box-shadow: none !important;
@@ -98,7 +98,7 @@ img {
   padding: 25px;
   padding-bottom: 30px;
   border: none;
-  border-radius: 0px;
+  border-radius: 10px;
 }
 @media (max-width: 576px) {
   .card {
@@ -109,7 +109,7 @@ img {
 .form-control {
   background-color: transparent !important;
   color: #fff !important;
-  border-radius: 0px;
+  border-radius: 5px;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
